--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - A Pen by Геннадий</title>
-  
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -16,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Это сайт-резюме, с курса по знакомству по HTML&CSS от Владилена Минина">
   <meta name="keywords" content="резюме, проба, вводный курс"
-    <title></title>
+    <title>Mironov Gennadiy Resume</title>
 </head>
 <body>
   <img src="https://i.postimg.cc/bJdVGDRb/5-DAFEF0-E-C13-F-4459-B388-1-B6-ECD6-C9-E24.png" alt="Миронов Геннадий" width=200px>
@@ -60,29 +50,22 @@
   </table>
   <h2>Связаться со мной:</h2>
   <form>
-  <div>
-    <label for="name">Ваше имя:</label>
-    <input id="name" type="text" placeholder="Введите ваше имя">
-  </div>
-  <div>
-    <label for="email">Ваш Email:</label>
-    <input id="email" type="email" placeholder="Введите ваш email">
-  </div>
-  <div>
-    <textplace></textplace>
-  </div>
     <div>
-    <label for="message">Ваше сообщение:</label>
+      <label for="name">Ваше имя:</label>
+      <input id="name" type="text" placeholder="Введите ваше имя">
+    </div>
+    <div>
+      <label for="email">Ваш Email:</label>
+      <input id="email" type="email" placeholder="Введите ваш email">
+    </div>
+    <div>
+      <label for="message">Ваше сообщение:</label>
       <br>
       <textarea id="message" cols="30" rows="10" placeholder="Ваше сообщение..."></textarea>
     </div>
     <button type="submit">Отправить</button>
     <button type="reset">Сбросить</button>
   </form>
-  
-</body>
-</html>
-<!-- partial -->
   
 </body>
 </html>
